Database supprot & rank / rankings

--- a/KakaoBotAT.Server/appsettings.json
+++ b/KakaoBotAT.Server/appsettings.json
@@ -4,5 +4,12 @@
       "Default": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDB": {
+    "Host": "localhost",
+    "Port": "27017",
+    "UserId": "admin",
+    "Password": "",
+    "Database": "Dogebot"
+  }
 }
