--- a/KakaoBotAT.Server/KakaoBotAT.Server.csproj
+++ b/KakaoBotAT.Server/KakaoBotAT.Server.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\KakaoBotAT.Commons\KakaoBotAT.Commons.csproj" />
   </ItemGroup>
 
