--- a/KakaoBotAT.Server/KakaoBotAT.Server.csproj
+++ b/KakaoBotAT.Server/KakaoBotAT.Server.csproj
@@ -10,6 +10,9 @@
     <None Update="Assets\Car.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\NMS.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
