--- a/KakaoBotAT.Server/KakaoBotAT.Server.csproj
+++ b/KakaoBotAT.Server/KakaoBotAT.Server.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.12.4" />
     <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
   </ItemGroup>
 
