--- a/KakaoBotAT.Server/KakaoBotAT.Server.csproj
+++ b/KakaoBotAT.Server/KakaoBotAT.Server.csproj
@@ -18,6 +18,8 @@
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.12.4" />
     <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.39.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="143.0.7499.19200" />
   </ItemGroup>
 
   <ItemGroup>
